[tool.poetry]
name = "pyfinpo"
version = "0.1.0"
description = "Personal library to implement portfolio optimization methods in python"
license = "None"
authors = ["Alvaro Sanchez <alvarosf07@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alvarosf07/pyfinpo"
documentation = "https://github.com/alvarosf07/pyfinpo"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
classifiers=[
        "Development Status :: 0 - Beta",
        "Environment :: Console",
        "Intended Audience :: Personal",
        "Intended Audience :: Science/Research",
        "License :: None",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "pyfinpo"} ]

[tool.poetry.urls]
"Issues" = "https://github.com/alvarosf07/pyfinpo/issues"
"Personal website" = "https://https://github.com/alvarosf07"



[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.1.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
cvxpy = "^1.5.3"
yfinance = "^0.2.48"
setuptools = "^75.3.0"




[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
jupyterlab = "^3.4.2"
black = "^22.3.0"
ipykernel = "^6.13.0"
jedi = "^0.18.1"
pytest-cov = "^3.0.0"


[tool.poetry.extras]
optionals = ["scikit-learn", "matplotlib", "cvxopt"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"